--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,31 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
 *.local
+
+# Environment variables (CRITICAL - DO NOT COMMIT)
+.env
+.env.local
+.env.production
+.env.*.local
+*.env
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Sensitive data
+secrets/
+*.pem
+*.key
+*.cert
 
 # Editor directories and files
 .vscode/*
